Secure configuration and update production links